// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AppHeader should display the sidebar on desktop 1`] = `
<nav
  class="app-header"
>
  <div
    class="container"
  >
    <div
      class="header-item open"
    >
      <a
        href="https://lunie.io"
      >
        <img
          alt="Lunie sharing circle - dots on the left outline of the cirle, line on the right side"
          class="header-item-logo"
          src="~assets/images/lunie-logo-white.svg"
        />
        
        Lunie
      
      </a>
       
      <!---->
       
      <!---->
    </div>
     
    <appmenu-stub />
  </div>
</nav>
`;

exports[`AppHeader should show the sidebar as a menu on mobile 1`] = `
<nav
  class="app-header mobile"
>
  <div
    class="container"
  >
    <div
      class="header-item open"
    >
      <a
        href="https://lunie.io"
      >
        <img
          alt="Lunie sharing circle - dots on the left outline of the cirle, line on the right side"
          class="header-item-logo"
          src="~assets/images/lunie-logo-white.svg"
        />
        
        Lunie
      
      </a>
       
      <!---->
       
      <div
        class="close-menu"
      >
        <i
          class="material-icons mobile-menu-action"
        >
          close
        </i>
      </div>
       
      <!---->
    </div>
     
    <appmenu-stub />
  </div>
</nav>
`;
